src/objects/Case_Charges__c.object
<CustomObject>
    <description>To enter all charges for a case - arrest, plea, indictment and court related</description>
    <fields>
        <fullName>Charge_Level__c</fullName>
        <formula>TEXT(Charge__r.Class__c) &amp; if(not(ispickval(Charge__r.Class__c, &quot;&quot;)), &quot; &quot;,&quot;&quot;) &amp; CASE(TEXT(Charge__r.Level__c), 
&quot;F&quot;, &quot;Felony&quot;, 
&quot;M&quot;, &quot;Misdemeanor&quot;, 
&quot;V&quot;, &quot;Violation&quot;, 
&quot;ERROR&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge</label>
        <referenceTo>Penal_Code__c</referenceTo>
        <relationshipLabel>Case Charges (Arrest Charge)</relationshipLabel>
        <relationshipName>Case_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Docket_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Docket #</label>
        <referenceTo>Case_Information__c</referenceTo>
        <relationshipLabel>Case Charges</relationshipLabel>
        <relationshipName>Case_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Arrest Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal Court Arraignment Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indictment Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Court Arraignment Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plea/ Finding Charges</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>chargeType__c</fullName>
        <label>chargeType</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Case Charges</label>
    <listViews>
        <fullName>Case_Charges_ERROR</fullName>
        <columns>NAME</columns>
        <columns>Charge_Level__c</columns>
        <columns>chargeType__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Charge__c</columns>
        <columns>Docket_No__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Charge_Level__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <label>Case Charges - ERROR</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Case Charges ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>